--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #ebc908;
+  --primary: #b6b4a8fd;
   --primary-text: #1a1a1a;
   --secondary: #ff1dec;
   --secondary-text: #ffffff;
